--- a/land.css
+++ b/land.css
@@ -79,6 +79,34 @@ body{
     color: var(--color-dark);
     background-color: var(--color-background);
 }
+.featured {
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    width: 100%;
+    height: 800px;
+    
+    
+  }
+  .feature button{
+    b
+  }
+  .card {
+    width: 540px;
+    text-align: center;
+    background-color: white;
+    padding: 15px;
+    box-shadow: 0 4px 8px rgba(231, 6, 6, 0.1);
+    height: 350px;
+    background-color: #fff;
+    font-size: 10;
+  }
+  .card img{
+    width: 409px;
+    height: 197px;
+
+  }
+
 
 a{
     color: var(--color-dark);
