change in profile is and cards

--- a/land.css
+++ b/land.css
@@ -54,11 +54,15 @@ html{
     width: 100%;
 }
 .hero {
+    background-image: url("doc.jpg");
+    background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
     border: 3px solid black;
     font-size: 20px;
     text-align: center;
     padding: 50px;
-    background-color: #a8abae57;
+    background-color: #eae7e7;
     width: 100%;
     
     
@@ -84,26 +88,30 @@ body{
     justify-content: space-around;
     padding: 20px;
     width: 100%;
-    height: 800px;
+    height: 389px;
     
     
   }
   .feature button{
-    b
+    background-color: black;
   }
   .card {
-    width: 540px;
+    width: 671px;
     text-align: center;
     background-color: white;
-    padding: 15px;
+    padding: 81px;
     box-shadow: 0 4px 8px rgba(231, 6, 6, 0.1);
-    height: 350px;
+    height: 363px;
     background-color: #fff;
     font-size: 10;
-  }
+}
+  
   .card img{
-    width: 409px;
-    height: 197px;
+    width: 456px;
+    height: 209px;
+    display: flex;
+    padding-left: 0px;
+    padding-top: -50px;
 
   }
 
