--- a/land.css
+++ b/land.css
@@ -122,7 +122,7 @@ a{
 
 img{
     display: block;
-    width: 100%;
+   
     object-fit: cover;
 }
 
@@ -511,9 +511,10 @@ main .recent-orders a{
 
 .right-section .user-profile img{
     width: 11rem;
-    height: auto;
-    margin-bottom: 0.8rem;
-    border-radius: 50%;
+    height: 116px;
+    margin-bottom: 2.8rem;
+    border-radius: 54%;
+
 }
 
 .right-section .user-profile h2{
