--- a/land.css
+++ b/land.css
@@ -101,7 +101,7 @@ body{
     background-color: white;
     padding: 81px;
     box-shadow: 0 4px 8px rgba(231, 6, 6, 0.1);
-    height: 363px;
+    height: 378px;
     background-color: #fff;
     font-size: 10;
 }
@@ -596,6 +596,42 @@ main .recent-orders a{
     align-items: center;
     gap: 0.6rem;
 }
+#chat-container {
+    width: 250px;
+    height: 250px;
+    position: fixed;
+    bottom: 1px;
+    right: 3px;
+
+    border: 1px solid #ccc;
+    background: #f9f9f9;
+    border-radius: 30px;
+    position: relative;
+}
+
+#chat-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
+#messages {
+    padding: 10px;
+    flex: 1;
+    overflow-y: auto;
+}
+
+#user-input {
+    width: 80%;
+    padding: 10px;
+}
+
+button {
+    padding: 10px;
+    width: 20%;
+}
+
 
 @media screen and (max-width: 1200px) {
     .container{
